# PyNumStim

./: .gitignore  README.md  pyproject.toml  trial_list.txt
pynumstim/: __init__.py  _data_sets.py  _math_problem.py  _mplist.py  _number.py  _problem.py  _simple.py  _two_step_problem.py  eprime.py  image.py  writer.py
pynumstim/datasets/: Lyons_Bielock.py
