[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynumstim"
authors = [{name = "Oliver Lindemann", email = "lindemann@essb.eur.nl"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies =  ["pandas>=2.1", "toml>=0.10.2", "sympy>=1.12"]

[project.urls]
Documentation = "https://github.com/lindemann09/PyNumStim"
Source = "https://github.com/lindemann09/PyNumStim"